2001-07-13  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-fade-out-entry): Replace yes-or-no-p by y-or-n-p;
	obsoleting an entry isn't fatal.

2000-01-18  François Pinard  <pinard@iro.umontreal.ca>

	* po-mode.el (po-ensure-source-references): Correctly imply the file
	name from the last which has been explicitly given.

2000-01-17  François Pinard  <pinard@iro.umontreal.ca>

	* po-mode.el (po-subedit-abort): Change variable names.
	(po-seek-equivalent-translation): Call set-buffer instead of
	select-buffer.
	(po-subedit-cycle-auxiliary): Adapt to multiple edits.

2001-08-12  François Pinard  <pinard@iro.umontreal.ca>

	* po-mode.el (po-find-charset, po-compute-counters,
	po-check-file-header, po-set-msgstr): Emacs 19 portability matters.

2000-01-03  François Pinard  <pinard@iro.umontreal.ca>

	* po-mode.el (po-check-file-header): Add a new line after default
	header only for non-empty PO files.

1999-12-10  François Pinard  <pinard@iro.umontreal.ca>

	* po-mode.el (po-send-mail): Clarify some prompts.
	Reported by Laurent Bourbeau.

1999-07-25  François Pinard  <pinard@iro.umontreal.ca>

	* po-mode.el (po-team-name-to-code): New variable.
	(po-guess-archive-name): Use it.

1999-06-01  François Pinard  <pinard@iro.umontreal.ca>

	* po-mode.el (po-guess-archive-name, po-guess-team-address): Accept
	more addresses, do not restrict to necessarily @li.org.

1998-12-06  François Pinard  <pinard@iro.umontreal.ca>

	* po-mode.el (po-guess-archive-name): Allow Free as well as GNU
	for domain name prefix.

1998-05-15  François Pinard  <pinard@iro.umontreal.ca>

	* po-mode.el (po-any-msgid-regexp, po-any-msgstr-regexp,
	po-msgstr-idx-keyword-regexp, po-obsolete-msgstr-regexp,
	po-set-msgstr, po-obsolete-comment-regexp, po-get-comment): Enforce
	#~ for obsolete entries.  The tilde is not optional anymore.

1998-05-09  François Pinard  <pinard@iro.umontreal.ca>

	* po-mode.el (po-after-entry-regexp): Check if at end of line, rather