@@ -1,3 +1,8 @@
+2001-07-14  Karl Eichwalder  <ke@suse.de>
+
+	* po-mode.el (po-mode-abbrev-table): New variable.
+	(po-edit-string): Use it.
+
 2001-07-13  Karl Eichwalder  <ke@suse.de>
 
 	* po-mode.el (po-fade-out-entry): Replace yes-or-no-p by y-or-n-p;
